--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "shell-utils"]
 	path = shell-utils
 	url = https://github.com/aiinkiestism/shell-utils
+[submodule "desktop-sample"]
+	path = desktop-sample
+	url = https://github.com/aiinkiestism/desktop-sample
